    * Improved keyboard functions when editing lyrics from the applet.
    * Improved automatic resizing of lyrics and suggestions in the context applet.
    * The audio device is now closed when playback stops. This saves power in several ways
      and frees it up for other applications. This also fixes the 100+ idle wakeups in
      PowerTOP when using the Xine backend.

  BUGFIXES:
    * Fixed regression causing many scripted services, including the, shipped by
      default, LibriVox service to not work at all.
    * Fixed corner case that could prevent scans from being completed,
      manifesting as a regression in 2.2.1. Huge thanks to Christian
      Kreibichfor his patience and time in helping to debug this.
    * Fixed removing multiple tracks from a saved playlist only removing the first track.
      (BR 218527)
    * Fixed cancel button not responding when loading thumbnails in the cover 
      manager. (BR 204882)
    * Fixed crash when using the inline playlist editor to resize items containing
      auto sized elements not shown becuase of all space already being used.
      (BR 218167)
    * Fixed relative links in wikipedia work. (BR 218512)
    * Fixed multilevel playlist sorting by time since last played so it sorts
      numerically rather than alphabetically. (BR 214761)
    * Fixed crash with "Edit Track Details" dialog. (BR 217625)
    * Fixed a number of cases where markers such as "current track", "stop after 
      this track" and others would get shown in both group header and the first 
      track in the group. (BR 197842)
    * Fixed regression causing non default moodbar styles to not work.
    * Jamendo.com service: Fixed track lengths not getting shown for most tracks.
      For existing installs, this requires a redownload of the Jamendo database.
      (BR 200531)
    * Jamendo.com service: Fixed searches not working because of Sql errors.
    * Jamendo.com service: Removed broken "Unknown" genre which would freeze