@@ -77,6 +77,8 @@ VERSION 2.2.2
       PowerTOP when using the Xine backend.
 
   BUGFIXES:
+    * More reliable MimeType detection for music formats. Patch by Rafał
+      Rzepecki <divided.mind@gmail.com>. (BR 219792)
     * Fixed regression causing many scripted services, including the, shipped by
       default, LibriVox service to not work at all.
     * Fixed corner case that could prevent scans from being completed,
